--- a/gb/25/1/8/n14409264.md
+++ b/gb/25/1/8/n14409264.md
@@ -13,14 +13,14 @@
 <figure id="attachment_14409275" aria-describedby="caption-attachment-14409275" style="width: 372px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14409275-2024120919053817355r.jpg"><img decoding="async" class=" wp-image-14409275" src="https://i.epochtimes.com/assets/uploads/2025/01/id14409275-2024120919053817355r.jpg" alt="" width="372" b="496" /></a><figcaption id="caption-attachment-14409275" class="wp-caption-text">清水河县公安局拒绝取保的通知书。（维权网）</figcaption></figure>
 <p>刘汉斌涉及的是一起什么样的重大案件呢？多方消息显示，刘汉斌出事，可能是他的文章惹祸。刘汉斌是一位自媒体人，有自己的微信公众号和视频号。</p>
 <p>刘汉斌的妻子聂女士表示，刘汉斌自从去年2、3月份开始做自媒体，关注国内外时事，对校园霸凌、食品安全等各方面都会发声。之前家里也很担心他出事，但是刘汉斌说，“这种事情是发生在别人身上，如果有一天我们自己也遭受了怎么办？”所以做为妻子，选择支持他。</p>
-<p>据她介绍，在内蒙古那边其实有好几件事值得关注，一个是乌拉特中旗盗采砂石的事情，刘汉斌去过现场；还有通辽一个拖欠工程款的案子。这次清水河县的警察来抓捕他，可能是因为当地书记引进的光伏项目所涉问题、农民的赔偿问题等被曝光，触及到了上面一些人利益。</p>
+<p>据她介绍，在内蒙古那边其实有好几件事值得关注，一个是乌拉特中旗盗采砂石的事情，刘汉斌去过现场；还有通辽一个拖欠工程款的案子。这次清水河县的警察来抓捕他，可能是因为当地书记引进的光伏项目所涉问题、农民的赔偿问题等被曝光，触及到了上面一些人的利益。</p>
 <p>她说，一起被抓的还有原呼和浩特某报社的记者张磊，还有一个叫孙鹤的。而刘汉斌并没有去过青水河当地，只是拿到了相关材料。</p>
 <h2>清水河县光伏项目的三大疑云</h2>
 <p>刘汉斌在《特警、特权、特殊项目——对内蒙古清水河县光伏项目的追问》一文重点介绍了清水河光伏项目的三大疑云。这个项目全名是“内蒙古呼和浩特市清水河县黄土丘陵沟壑水土保持区（沿黄河一带）废弃矿山综合治理及未利用地生态修复300MW光伏项目”。</p>
 <p>据内蒙古太阳能行业协会官网发布的消息，清水河光伏项目是广东能源集团在内蒙古区域投资开发的单体容量最大的光伏项目，建设用地约7,000亩，规划建设容量为300兆瓦。</p>
 <p>刘汉斌在文中表示，清水河光伏项目在项目报批、用地性质、土地流转等环节出现了诸多问题，损害了部分群众的利益，饱受群众诟病。</p>
 <p>刘汉斌的文章介绍，该项目疑云之一：清水河光伏项目的用地究竟是废弃矿山修复治理用地和未利用生态修复地，还是农民长期承包耕作、放牧的耕地、林地、牧草地?</p>
-<p>据当地记者调查，该项目实际使用约7,000亩项目用地中，除了3.7公顷左右的配套设施用地在自然资源部门履行了建设用地的批准征用手续外，其余土地全部是以农业用地流转租赁方式取得。</p>
+<p>据当地记者调查，在该项目实际使用的约7,000亩项目用地中，除了3.7公顷左右的配套设施用地在自然资源部门履行了建设用地的批准征用手续外，其余土地全部是以农业用地流转租赁方式取得。</p>
 <p>如，涉及清水河县宏河镇解放村的3,300多亩土地中，有少部分耕地，是国家明令禁止光伏项目占用的；还有一些林地，其余绝大部分为已经实际分配到解放村村民各家各户的牧草用地。这些土地中并没有任何的未利用生态修复土地，更没有废弃矿山修复治理土地。</p>
 <p>疑云之二：该项目在政府网站和当地媒体的公开宣传均为7,000亩，而该项目的环评批复却是1098,450平米（折算为1647.59亩），不足7,000亩的四分之一。</p>
 <p>业内人士指出，清水河县光伏项目存在批少占多，涉嫌违法违规占用土地，其违法违规占地可能高达5300多亩，是其批准用地的3倍多。</p>
@@ -40,36 +40,40 @@
 <p>吴绍平认为，公安异地抓人，如果是正常办案可以。而刘汉斌对光伏项目非法占地发起公民监督，显然是触碰了地方利益，所以他们才动用这种非法的手段，搞跨省抓捕。除了留下一个传唤证以外，没有给家属任何的正式法律文书，显然程序违法。</p>
 <p>吴绍平及大陆法律人士都认为，这是一种滥用法律、滥权。受利益驱动，警察跨省跨境去执法、去打压民众。</p>
 <p>“中共‘以警治国’，打压民间言论的趋势很明显。现在90%的寻衅滋事罪都不构成犯罪的，寻衅滋事罪成了一个打压言论的‘口袋罪’。当年武汉的李文亮他们也是涉嫌寻衅滋事被传唤，真正意义上的流氓寻衅滋事反而不立案。这就是滥用‘口袋罪’来打击报复，是控制言论的一种手段。”该大陆法律人士说。</p>
-<p>责任编辑：郑浩宇</p>
-	
+<p>责任编辑：郑浩宇#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409236.md#1">【净园财经】中共利用媒体洗脑 花钱知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408254.md#1">曾陷冤狱17年半 两位法轮功学员再遭迫害</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408493.md#1">超10亿流量关注度救不了仍失踪的李宜雪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14407800.md#1">【内幕】中共跨国攻击法轮功是对美新战略</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/5/n10764174.md#1">黄天荡大捷 万人敌韩世忠的忠勇故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396978.md#1">【杨延昭传奇】杨宗保初遇穆桂英（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405635.md#1">【未解之谜】地球在燃烧 濒死中感受神的悲伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366092.md#1">姜子牙的苦中之苦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408253.md#1">【新闻大破解】中国经济4大炸弹 2025远离中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407581.md#1">【百年真相】习军中大员被抓 政局或有变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407623.md#1">【未解之谜】凡人如何修仙？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406708.md#1">【特稿】神韵2亿6600万美元资金背后的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406716.md#1">【特稿】法轮功创始人传功和生活的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405824.md#1">五款可靠汽车或在2025年降价 含丰田Camry</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407645.md#1">名下大陆公司全注销 吴奇隆退出所有关联企业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407605.md#1">大陆顶流男星鹿晗三大社交账号均被禁止关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408393.md#1">大陆知名乐队买服装表演后退货 造型师发文道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407570.md#1">中国演员王星赴泰拍戏 被载往泰缅边境后失联</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408418.md#1">裘莉离婚获8千万美元分手费 彼特心声曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406564.md#1">头发和指甲会长多快？ 为何有人长得较快？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396364.md#1">怨恨：人类心中的不健康客人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407268.md#1">2025年标志着Beta世代的开始 你该知道什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14404844.md#1">腰椎间盘突出自我复健法升级版</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405818.md#1">脾胃伤 百病生 中医授三大招健脾养胃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/8/n14409264.htm">曝光伏项目占地问题 重庆自媒体人遭跨省抓捕</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409264.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
